--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.11",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -15,6 +16,8 @@
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "postcss-preset-env": "^7.8.2",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.0"
   }
 }
