--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@heroicons/react": "^2.0.11",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
