--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.11",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.5",
     "next": "latest",
     "react": "^17.0.2",
+    "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
